[gd_scene load_steps=6 format=3 uid="uid://dqhgruik4l0ca"]

[ext_resource type="Script" path="res://game_nodes.gd" id="1_v2jfx"]
[ext_resource type="Texture2D" uid="uid://b5h00nm2mmohy" path="res://art/particle.png" id="2_hlrn0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uw5o6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x4koq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8pvg2"]

[node name="gameNode" type="Node2D"]
scale = Vector2(0.05, 0.05)
script = ExtResource("1_v2jfx")

[node name="node_sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_hlrn0")

[node name="textLabel" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = -144.0
offset_top = -352.0
offset_right = 546.0
offset_bottom = 378.0
theme_override_font_sizes/normal_font_size = 500
text = "0"
scroll_active = false

[node name="moveButton" type="TouchScreenButton" parent="."]
visible = false
modulate = Color(0.686275, 0, 0.678431, 1)
scale = Vector2(50, 50)
shape = SubResource("CircleShape2D_uw5o6")

[node name="Action_Button" type="TouchScreenButton" parent="."]
visible = false
scale = Vector2(50, 50)
shape = SubResource("CircleShape2D_x4koq")

[node name="Expand_Button" type="TouchScreenButton" parent="."]
visible = false
scale = Vector2(50, 50)
shape = SubResource("CircleShape2D_8pvg2")

[connection signal="pressed" from="moveButton" to="." method="_on_move_button_pressed"]
[connection signal="pressed" from="Action_Button" to="." method="_on_action_button_pressed"]
[connection signal="pressed" from="Expand_Button" to="." method="_on_expand_button_pressed"]
